CAMBIO DE COLORES

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,7 +15,8 @@ import { SITE_TITLE, SITE_DESCRIPTION } from "../consts";
 	<body>
 		<Header />
 
-		<main class="align-content: bg-center">
+		<main>
+			<h2>¡Bienvenidos!</h2>
 			<p>
 				Este blog es un reflejo de mis pasiones y pensamientos. Aquí
 				compartiré mis experiencias, ideas y creaciones con la esperanza
