--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -4,8 +4,8 @@
 
 
 :root {
-	--accent: #ff0080;
-	--accent-dark: #848482;
+	--accent: #050404;
+	--accent-dark: #f7f5f5;
 	--black: 15, 18, 25;
 	--gray: 96, 115, 159;
 	--gray-light: 128, 128, 128;
