Refactor about page content

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -9,12 +9,11 @@ import Layout from "../layouts/BlogPost.astro";
 	heroImage="/me.jpg"
 >
 	<p>
-		¡Bienvenidos a mi espacio personal! Soy Felix Sanchez, un entusiasta del
-		baloncesto y la estrategia detrás de cada jugada. Vivo y respiro NBA, un
-		ferviente seguidor de los Minnesota Timberwolves. Mi pasión por el
-		deporte va más allá de ser un espectador; es una metáfora de la vida,
-		donde la estrategia, el trabajo en equipo y la perseverancia juegan un
-		papel crucial.
+		Soy Felix Sanchez, un entusiasta del baloncesto y la estrategia detrás
+		de cada jugada. Vivo y respiro NBA, un ferviente seguidor de los
+		Minnesota Timberwolves. Mi pasión por el deporte va más allá de ser un
+		espectador; es una metáfora de la vida, donde la estrategia, el trabajo
+		en equipo y la perseverancia juegan un papel crucial.
 	</p>
 
 	<p>
